@@ -1,5 +1,11 @@
 2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>
 
+	* nautilussvn/lib/vcs/svn.py:
+	Updated commentary describing how the cache is build so everybody knows and
+	also so I don't have trouble rading the code 6 months from now.
+
+2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>
+
 	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
 	Improved the way watches are added. Changed all status calls to work
 	properly with the new cache (which is reverted).
